fix: profile button gap

--- a/src/pages/ProfilePage/ProfilePage.module.scss
+++ b/src/pages/ProfilePage/ProfilePage.module.scss
@@ -29,7 +29,7 @@
 
 @media (max-width: $screen-l) {
   .footer {
-    gap: 16px;
+    gap: 24px;
   }
 }
 
